--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dipeshhhh Poudel - Electrical Engineer</title>
+  <title>Dipesh Poudel - Electrical Engineer</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
@@ -376,7 +376,7 @@
   <div class="book-background">
     <a href="#philosophy">
       <img src="./assets/front_book_cover.png" alt="Zero Over Zero Book Cover" class="book-background-image">
-      <span class="book-author">by Deepak Poudel</span>
+      <span class="book-author">by Dipesh Poudel</span>
       <span class="book-cta orbitron">Request Advance Reader Copy</span>
     </a>
   </div>
@@ -403,7 +403,7 @@
           <div class="hud-corner tr"></div>
           <div class="hud-corner bl"></div>
           <div class="hud-corner br"></div>
-          <span class="orbitron text-xl font-bold">DEEPAK.POUDEL</span>
+          <span class="orbitron text-xl font-bold">DIPESH POUDEL</span>
         </div>
         <div class="flex space-x-4 text-sm">
           <div><span class="status-indicator status-active"></span>SYSTEMS ONLINE</div>
@@ -425,8 +425,8 @@
 
   <section id="hero" class="section">
     <div class="hero-content">
-      <h1 class="hero-title orbitron">DEEPAK POUDEL</h1>
-      <h2 class="hero-subtitle">AEROSPACE ENGINEER • WRITER</h2>
+      <h1 class="hero-title orbitron">DIPESH POUDEL</h1>
+      <h2 class="hero-subtitle">ELECTRICAL ENGINEER </h2>
       <p class="text-xl italic mt-4">"I like engineering because I love imagining."</p>
       <div class="flex justify-center space-x-8 mt-8">
         <div class="hud-element p-6 text-center">
@@ -3977,6 +3977,7 @@
 </body>
 </html>
 ```
+
 
 
 
