--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                   radial-gradient(circle at 20% 30%, rgba(0, 153, 204, 0.1) 0%, transparent 50%);
     }
 
-  /* bookcsssectionedited
+   bookcsssectionedited
     .book-background {
       position: fixed;
       bottom: 20px;
@@ -401,7 +401,8 @@
 
   
 <body>
-<!--  <div class="book-background">
+  <!--
+  <div class="book-background">
     <a href="#philosophy">
       <img src="./assets/front_book_cover.png" alt="Zero Over Zero Book Cover" class="book-background-image">
       <span class="book-author">by Dipesh Poudel</span>
@@ -4340,6 +4341,7 @@
 </body>
 </html>
 ```
+
 
 
 
