--- a/index.html
+++ b/index.html
@@ -663,6 +663,14 @@
       perspective: 1000px;
     }
   </style>
+
+
+
+
+
+
+
+  
   <div class="max-w-7xl mx-auto">
     <h2 class="orbitron text-4xl font-bold text-center mb-12">
       <span class="status-indicator status-active"></span>AEROSPACE ENGINEERING PORTFOLIO
@@ -675,9 +683,9 @@
     <div class="hud-corner tr"></div>
     <div class="hud-corner bl"></div>
     <div class="hud-corner br"></div>
-    <h3 class="orbitron text-xl font-bold mb-4 text-accent-cyan">WHAT: Physics-Based Python Flight Simulator for ATR-72 Amphibious Retrofit (FF72)</h3>
-    <p class="text-sm mb-4">Developed a high-fidelity physics-based simulator to evaluate the feasibility of retrofitting the ATR 72 into the FF72 amphibious scooper. The framework models 3-DOF flight dynamics, transient takeoff/climb performance, and system interactions under CS-25/EASA certification constraints. This research supports firefighting aircraft design through modular integration with FAST-OAD for mission-level trade studies. Along the way, I gained insights into handling qualities and aircraft performance modelling, tackling the challenge of modernizing the aging Canadair fleet for aerial firefighting. Working on this also deepened my understanding of coding flight physics and building high-fidelity models that connect different parts of aircraft design.</p>
-    <img src="./assets/ff72_concept.png" alt="Canadair CL-415 and Positive FF72" class="project-image w-full h-48 object-contain mt-2 rounded cursor-pointer" onclick="openModal('./assets/ff72_concept.png', 'Canadair CL-415 and Positive FF72')">
+    <h3 class="orbitron text-xl font-bold mb-4 text-accent-cyan">AI infernece studied globally shows Diuranl Usage Pattern</h3>
+    <p class="text-sm mb-4">To model the duirunal usage pattern using mathematical modeling, 3 gaussain function swere developed assuming the suitable values to model the usage pattern.. the curves were fitted and actial vs targeteed graph was plotted. this showed the effectively modeled system </p>
+    <img src="./graphics/fig1.png" alt="Canadair CL-415 and Positive FF72" class="project-image w-full h-48 object-contain mt-2 rounded cursor-pointer" onclick="openModal('./graphics/fig1.png', 'Duirnal usage modeling')">
     <p class="text-xs text-center mt-1"> ATR-72 retrofit FF72 concept (From Positive Aviation).</p>
     <img src="./assets/water_scooper_mission_profile.png" alt="Standard Mission Profile for a Firefighting Sortie" class="project-image w-full h-32 object-contain mt-2 rounded cursor-pointer" onclick="openModal('./assets/standard_mission_profile.png', 'Standard Mission Profile for a Firefighting Sortie')">
     <p class="text-xs text-center mt-1">Typical firefighting sortie mission profile for amphibious scoopers.</p>
@@ -4342,6 +4350,7 @@
 </body>
 </html>
 ```
+
 
 
 
