--- a/index.html
+++ b/index.html
@@ -683,12 +683,12 @@
     <div class="hud-corner tr"></div>
     <div class="hud-corner bl"></div>
     <div class="hud-corner br"></div>
-    <h3 class="orbitron text-xl font-bold mb-4 text-accent-cyan">AI infernece studied globally shows Diuranl Usage Pattern</h3>
-    <p class="text-sm mb-4">To model the duirunal usage pattern using mathematical modeling, 3 gaussain function swere developed assuming the suitable values to model the usage pattern.. the curves were fitted and actial vs targeteed graph was plotted. this showed the effectively modeled system </p>
-    <img src="./graphics/fig1.png" alt="Canadair CL-415 and Positive FF72" class="project-image w-full h-48 object-contain mt-2 rounded cursor-pointer" onclick="openModal('./graphics/fig1.png', 'Duirnal usage modeling')">
-    <p class="text-xs text-center mt-1"> ATR-72 retrofit FF72 concept (From Positive Aviation).</p>
-    <img src="./assets/water_scooper_mission_profile.png" alt="Standard Mission Profile for a Firefighting Sortie" class="project-image w-full h-32 object-contain mt-2 rounded cursor-pointer" onclick="openModal('./assets/standard_mission_profile.png', 'Standard Mission Profile for a Firefighting Sortie')">
-    <p class="text-xs text-center mt-1">Typical firefighting sortie mission profile for amphibious scoopers.</p>
+    <h3 class="orbitron text-xl font-bold mb-4 text-accent-cyan"> WHAT: AI infernece studied globally shows Diuranl Usage Pattern</h3>
+    <p class="text-sm mb-4">With reference to AI inference patterns on the diurnal usage variation~\cite{ref1}, a mathematical model was developed to represent a single region's inference activity. This model, expressed through the superposition of multiple Gaussian distributions and a constant baseline term, established a canonical regional inference pattern. The parameters were chosen to fit the mathematical model as closely as possible to the target curve from~\cite{ref1}, thereby accurately capturing the behavioral patterns of users.The parameters choosen are listed in the table below. </p>
+    <img src="./graphics/fig2.png" alt="Diurnal AI inference pattern" class="project-image w-full h-48 object-contain mt-2 rounded cursor-pointer" onclick="openModal('./graphics/fig2.png', 'Duirnal AI Inference Pattern')">
+    <p class="text-xs text-center mt-1">Diurnal AI inference Patterns .</p>
+    <img src="./graphics/fig1.png" alt="Diurnal usage mathematical modeling plotted" class="project-image w-full h-32 object-contain mt-2 rounded cursor-pointer" onclick="openModal('./graphics/fig1.png', 'Diurnal usage Mathe,mathematical modeling plotted')">
+    <p class="text-xs text-center mt-1"> Target vs Fitted curve(Inference Modeling)</p>
   </div>
 
   <!-- HOW Section -->
@@ -4350,6 +4350,7 @@
 </body>
 </html>
 ```
+
 
 
 
