--- a/index.html
+++ b/index.html
@@ -670,14 +670,16 @@
 
 
 
-  
+<!--  
   <div class="max-w-7xl mx-auto">
     <h2 class="orbitron text-4xl font-bold text-center mb-12">
       <span class="status-indicator status-active"></span>AEROSPACE ENGINEERING PORTFOLIO
     </h2>
     
   <div class="grid grid-cols-1 lg:grid-cols-3 gap-8 mb-16">
-  <!-- WHAT Section -->
+  <!-- WHAT Section --> 
+ 
+  <!--
   <div class="project-card">
     <div class="hud-corner tl"></div>
     <div class="hud-corner tr"></div>
@@ -692,7 +694,10 @@ Global diurnal inference traffic was modeled across 10 geographic regions with d
     <p class="text-xs text-center mt-1"> Target vs Fitted curve(Inference Modeling)</p>
   </div>
 
+  
   <!-- HOW Section -->
+  
+  <!--
   <div class="project-card hologram">
     <h3 class="orbitron text-xl font-bold mb-4 text-warning-amber">HOW: Mathematical Modeling and Parametric Computation Chain</h3>
     <div class="space-y-3">
@@ -760,12 +765,14 @@ gpu
       
     </div>
     <!-- Fixed XDSM Diagram Upper Part -->
-    <div class="mt-4">
+  <!--  
+  <div class="mt-4">
       <img src="./assets/global_xdsm_diagram.png" alt="Global XDSM Diagram Illustrating Modular Interconnection" class="project-image w-full h-32 object-contain rounded cursor-pointer" onclick="openModal('./assets/global_xdsm_diagram.png', 'Global XDSM Diagram Illustrating Modular Interconnection')">
       <p class="text-xs text-center mt-1">XDSM diagram showing modular architecture of aircraft subsystems models within the simulator.</p>
     </div>
     <!-- Carousel Lower Part -->
-    <div class="relative overflow-hidden mt-2 rounded-lg border border-[var(--accent-cyan)]" style="height: 240px;">
+  <!--  
+  <div class="relative overflow-hidden mt-2 rounded-lg border border-[var(--accent-cyan)]" style="height: 240px;">
       <div class="carousel-container flex transition-transform duration-500 ease-in-out" id="models-carousel" style="transform: translateX(0%);">
         <div class="carousel-item flex-shrink-0 w-full text-center">
           <img src="./assets/dynamics_model_flowchart.png" alt="Dynamics Model Flowchart" class="w-full h-40 object-contain rounded cursor-pointer" onclick="openModal('./assets/dynamics_model_flowchart.png', 'Flowchart Detailing the Dynamics Model’s State Integration and Event Detection')">
@@ -802,6 +809,7 @@ gpu
   </div>
 
   <!-- RESULTS Section -->
+  <!--
   <div class="project-card">
     <h3 class="orbitron text-xl font-bold mb-4 text-success-green">RESULTS: Closed-Form Energy Modeling and Efficiency Insights</h3>
     <div class="space-y-4">
@@ -824,6 +832,146 @@ Revealed that asynchronous regional peaks can smooth global GPU utilization, red
 Enables scenario-based simulations for scaling, optimization, and carbon impact studies of large-scale AI infrastructure.</div>
       </div>
     </div>
+
+<div class="max-w-7xl mx-auto">
+  <h2 class="orbitron text-4xl font-bold text-center mb-12">
+    <span class="status-indicator status-active"></span>AEROSPACE ENGINEERING PORTFOLIO
+  </h2>
+  
+  <div class="grid grid-cols-1 lg:grid-cols-3 gap-8 mb-16">
+    <!-- WHAT Section -->
+
+  
+  
+  
+  <div class="project-card">
+      <div class="hud-corner tl"></div>
+      <div class="hud-corner tr"></div>
+      <div class="hud-corner bl"></div>
+      <div class="hud-corner br"></div>
+      <h3 class="orbitron text-xl font-bold mb-4 text-accent-cyan">WHAT: Foundational Framework for AI Data Center Power Consumption Modeling</h3>
+      <p class="text-sm mb-4 break-words">This research establishes a quantitative, end-to-end framework for modeling AI data center power consumption driven by real-world inference workloads. The objective is to create a traceable and tunable model that links global user request dynamics to GPU-level energy behavior, enabling reproducible benchmarking and sustainable AI infrastructure planning.
+Global diurnal inference traffic was modeled across 10 geographic regions with distinct activity magnitudes and local-time peaks, then aligned to UTC to form an aggregated global demand curve. The aggregate inference load was decomposed into 13 representative AI subtasks (e.g., image generation, video classification, NLP tasks) organized by tiered frequency to reflect workload diversity. The framework provides a mathematically closed mapping from request-level load to site-wide power and energy, accounting for batching, utilization, and PUE effects.</p>
+      <img src="./graphics/fig2.png" alt="Diurnal AI inference pattern" class="project-image w-full h-48 object-contain mt-2 rounded cursor-pointer" onclick="openModal('./graphics/fig2.png', 'Diurnal AI Inference Pattern')">
+      <p class="text-xs text-center mt-1">Diurnal AI inference Patterns.</p>
+      <img src="./graphics/fig1.png" alt="Diurnal usage mathematical modeling plotted" class="project-image w-full h-32 object-contain mt-2 rounded cursor-pointer" onclick="openModal('./graphics/fig1.png', 'Diurnal usage mathematical modeling plotted')">
+      <p class="text-xs text-center mt-1">Target vs Fitted curve (Inference Modeling)</p>
+    </div>
+
+    <!-- HOW Section -->
+    <div class="project-card hologram">
+      <h3 class="orbitron text-xl font-bold mb-4 text-warning-amber">HOW: Mathematical Modeling and Parametric Computation Chain</h3>
+      <div class="space-y-3"> <!-- Consolidated single space-y-3 for all list items -->
+        <div class="flex items-center">
+          <div class="w-4 h-4 border border-accent-cyan mr-3"></div>
+          <span class="text-sm break-words">Global Demand Modeling: Diurnal AI inference request profiles from 10 distinct geographic regions were converted to UTC and aggregated to create a global, time-overlapping request profile reflecting real temporal demand dynamics.</span>
+        </div>
+        <div class="flex items-center">
+          <div class="w-4 h-4 border border-accent-cyan mr-3"></div>
+          <span class="text-sm break-words">Task Decomposition and Tiering: The total inference request stream was divided into 13 subtasks and assigned to a frequency-based tier to represent their relative proportion within the overall request mix.</span>
+        </div>
+        <div class="flex items-center">
+          <div class="w-4 h-4 border border-accent-cyan mr-3"></div>
+          <span class="text-sm break-words">Computation Mapping: FLOPs-per-request (F_k) from literature were used, in conjunction with A100 GPU peak throughput, to estimate the baseline GPU-seconds per request (s_k).</span>
+        </div>
+        <div class="flex items-center">
+          <div class="w-4 h-4 border border-accent-cyan mr-3"></div>
+          <span class="text-sm break-words">Batching and MFU Modeling: A time-varying batch size function (b_k(t)), proportional to the request arrival rate, was introduced and integrated with a saturating exponential Multi-Factor Utilization (MFU) function (MFU_k(b)) to dynamically compute GPU-seconds/request, accounting for efficiency gains from batching.</span>
+        </div>
+        <div class="flex items-center">
+          <div class="w-4 h-4 border border-accent-cyan mr-3"></div>
+          <span class="text-sm break-words">GPU Fleet and Power Modeling: The aggregated per-task compute determined the total GPU-seconds (S_total(t)), from which the required GPU count (N_gpu(t)) was derived based on utilization targets; site-level power and energy were then estimated by modeling GPU power draw (P_gpu(U)), incorporating host (β) and I/O (γ) overheads, and applying Power Usage Effectiveness (PUE) scaling.</span>
+        </div>
+      </div>
+      <!-- Fixed XDSM Diagram Upper Part -->
+      <div class="mt-4">
+        <img src="./assets/global_xdsm_diagram.png" alt="Global XDSM Diagram Illustrating Modular Interconnection" class="project-image w-full h-32 object-contain rounded cursor-pointer" onclick="openModal('./assets/global_xdsm_diagram.png', 'Global XDSM Diagram Illustrating Modular Interconnection')">
+        <p class="text-xs text-center mt-1">XDSM diagram showing modular architecture of aircraft subsystems models within the simulator.</p>
+      </div>
+      <!-- Carousel Lower Part -->
+      <div class="relative overflow-hidden mt-2 rounded-lg border border-[var(--accent-cyan)]" style="height: 240px;">
+        <div class="carousel-container flex transition-transform duration-500 ease-in-out" id="models-carousel" style="transform: translateX(0%);">
+          <div class="carousel-item flex-shrink-0 w-full text-center">
+            <img src="./assets/dynamics_model_flowchart.png" alt="Dynamics Model Flowchart" class="w-full h-40 object-contain rounded cursor-pointer" onclick="openModal('./assets/dynamics_model_flowchart.png', 'Flowchart Detailing the Dynamics Model's State Integration and Event Detection')">
+            <p class="text-xs mt-1">Dynamics model flowchart showing state integration and event detection logic.</p>
+          </div>
+          <div class="carousel-item flex-shrink-0 w-full text-center">
+            <img src="./assets/controller_model_flowchart.png" alt="Controller Model Flowchart" class="w-full h-40 object-contain rounded cursor-pointer" onclick="openModal('./assets/controller_model_flowchart.png', 'Flowchart Outlining the Controller Model's PID Regulation and Mode Switch')">
+            <p class="text-xs mt-1">PID controller model regulating pitch, thrust, and mode switching for stability.</p>
+          </div>
+          <div class="carousel-item flex-shrink-0 w-full text-center">
+            <img src="./assets/simulation_framework_flowchart.png" alt="Simulation Framework Flowchart" class="w-full h-40 object-contain rounded cursor-pointer" onclick="openModal('./assets/simulation_framework_flowchart.png', 'Flowchart for the Simulation Framework's Iterative State Updates and Performance Evaluation')">
+            <p class="text-xs mt-1">Framework flowchart for iterative state updates and certification performance evaluation.</p>
+          </div>
+          <div class="carousel-item flex-shrink-0 w-full text-center">
+            <img src="./assets/atmospheric_model_flowchart.png" alt="Atmospheric Model Flowchart" class="w-full h-40 object-contain rounded cursor-pointer" onclick="openModal('./assets/atmospheric_model_flowchart.png', 'Flowchart Outlining the Atmospheric Model's Progression from Altitude Input to Environmental Outputs')">
+            <p class="text-xs mt-1">Atmospheric model progression from altitude inputs to wind/temperature outputs.</p>
+          </div>
+          <div class="carousel-item flex-shrink-0 w-full text-center">
+            <img src="./assets/aerodynamic_model_flowchart.png" alt="Aerodynamic Model Flowchart" class="w-full h-40 object-contain rounded cursor-pointer" onclick="openModal('./assets/aerodynamic_model_flowchart.png', 'Flowchart for Aerodynamic Model')">
+            <p class="text-xs mt-1">Aerodynamic model flowchart with lift/drag interpolation and ground effect.</p>
+          </div>
+          <div class="carousel-item flex-shrink-0 w-full text-center">
+            <img src="./assets/landing_gear_model_flowchart.png" alt="Landing Gear Model Flowchart" class="w-full h-40 object-contain rounded cursor-pointer" onclick="openModal('./assets/landing_gear_model_flowchart.png', 'Flowchart for Landing Gear Model's Force Calculation and Equilibrium Process')">
+            <p class="text-xs mt-1">Landing gear model handling force equilibrium and ground dynamics.</p>
+          </div>
+          <div class="carousel-item flex-shrink-0 w-full text-center">
+            <img src="./assets/propulsion_model_flowchart.png" alt="Propulsion Model Flowchart" class="w-full h-40 object-contain rounded cursor-pointer" onclick="openModal('./assets/propulsion_model_flowchart.png', 'Flowchart for Propulsion Model')">
+            <p class="text-xs mt-1">Turboprop propulsion model including efficiency and OEI thrust asymmetry.</p>
+          </div>
+        </div>
+        <button onclick="slideCarousel('models-carousel', -1)" class="absolute left-0 top-1/2 transform -translate-y-1/2 bg-[var(--primary-blue)] text-black px-3 py-2 rounded opacity-75 hover:opacity-100 transition-opacity">‹</button>
+        <button onclick="slideCarousel('models-carousel', 1)" class="absolute right-0 top-1/2 transform -translate-y-1/2 bg-[var(--primary-blue)] text-black px-3 py-2 rounded opacity-75 hover:opacity-100 transition-opacity">›</button>
+      </div>
+    </div>
+
+    <!-- RESULTS Section -->
+    <div class="project-card">
+      <h3 class="orbitron text-xl font-bold mb-4 text-success-green">RESULTS: Closed-Form Energy Modeling and Efficiency Insights</h3>
+      <div class="space-y-4">
+        <div class="bg-green-900 bg-opacity-20 p-3 rounded">
+          <div class="text-sm font-bold">Model Performance and Validation</div>
+          <div class="text-xs break-words">Achieved a dimensionally consistent, closed-form relationship from global inference traffic → GPU utilization → total data center energy.
+
+Validated stability of model outputs across diurnal demand variations and batch saturation conditions</div>
+        </div>
+        <div class="bg-blue-900 bg-opacity-20 p-3 rounded">
+          <div class="text-sm font-bold">Parametric and Efficiency Insights</div>
+          <div class="text-xs break-words">Identified strong sensitivity of total energy consumption to batch window size and MFU saturation rate, with higher batching yielding nonlinear efficiency gains.
+
+Revealed that asynchronous regional peaks can smooth global GPU utilization, reducing idle-to-peak transitions and improving average efficiency.</div>
+        </div>
+        <div class="bg-purple-900 bg-opacity-20 p-3 rounded">
+          <div class="text-sm font-bold">Framework Contributions</div>
+          <div class="text-xs break-words">Provides a reproducible and auditable baseline model for forecasting AI workload energy intensity.
+
+Enables scenario-based simulations for scaling, optimization, and carbon impact studies of large-scale AI infrastructure.</div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  
     <div class="relative overflow-hidden mt-4 rounded-lg border border-[var(--accent-cyan)]" style="height: 240px;">
       <div class="carousel-container flex transition-transform duration-500 ease-in-out" id="results-carousel" style="transform: translateX(0%);">
         <div class="carousel-item flex-shrink-0 w-full text-center">
@@ -4407,6 +4555,7 @@ Enables scenario-based simulations for scaling, optimization, and carbon impact 
 </body>
 </html>
 ```
+
 
 
 
