--- a/index.html
+++ b/index.html
@@ -683,8 +683,9 @@
     <div class="hud-corner tr"></div>
     <div class="hud-corner bl"></div>
     <div class="hud-corner br"></div>
-    <h3 class="orbitron text-xl font-bold mb-4 text-accent-cyan"> WHAT: AI infernece studied globally shows Diuranl Usage Pattern</h3>
-    <p class="text-sm mb-4">With reference to AI inference patterns on the diurnal usage variation~\cite{ref1}, a mathematical model was developed to represent a single region's inference activity. This model, expressed through the superposition of multiple Gaussian distributions and a constant baseline term, established a canonical regional inference pattern. The parameters were chosen to fit the mathematical model as closely as possible to the target curve from~\cite{ref1}, thereby accurately capturing the behavioral patterns of users.The parameters choosen are listed in the table below. </p>
+    <h3 class="orbitron text-xl font-bold mb-4 text-accent-cyan"> WHAT: Foundational Framework for AI Data Center Power Consumption Modeling.</h3>
+    <p class="text-sm mb-4">This research establishes a quantitative, end-to-end framework for modeling AI data center power consumption driven by real-world inference workloads. The objective is to create a traceable and tunable model that links global user request dynamics to GPU-level energy behavior, enabling reproducible benchmarking and sustainable AI infrastructure planning.
+Global diurnal inference traffic was modeled across 10 geographic regions with distinct activity magnitudes and local-time peaks, then aligned to UTC to form an aggregated global demand curve. The aggregate inference load was decomposed into 13 representative AI subtasks (e.g., image generation, video classification, NLP tasks) organized by tiered frequency to reflect workload diversity. The framework provides a mathematically closed mapping from request-level load to site-wide power and energy, accounting for batching, utilization, and PUE effects. </p>
     <img src="./graphics/fig2.png" alt="Diurnal AI inference pattern" class="project-image w-full h-48 object-contain mt-2 rounded cursor-pointer" onclick="openModal('./graphics/fig2.png', 'Duirnal AI Inference Pattern')">
     <p class="text-xs text-center mt-1">Diurnal AI inference Patterns .</p>
     <img src="./graphics/fig1.png" alt="Diurnal usage mathematical modeling plotted" class="project-image w-full h-32 object-contain mt-2 rounded cursor-pointer" onclick="openModal('./graphics/fig1.png', 'Diurnal usage Mathe,mathematical modeling plotted')">
@@ -4350,6 +4351,7 @@
 </body>
 </html>
 ```
+
 
 
 
