--- a/index.html
+++ b/index.html
@@ -673,7 +673,7 @@
   
   <div class="max-w-7xl mx-auto">
     <h2 class="orbitron text-4xl font-bold text-center mb-12">
-      <span class="status-indicator status-active"></span>AEROSPACE ENGINEERING PORTFOLIO
+      <span class="status-indicator status-active"></span>ELECTRICAL ENGINEERING PORTFOLIO
     </h2>
     
   <div class="grid grid-cols-1 lg:grid-cols-3 gap-8 mb-16">
@@ -715,28 +715,33 @@ Global diurnal inference traffic was modeled across 10 geographic regions with d
     </div>
     <!-- Fixed XDSM Diagram Upper Part -->
     <div class="mt-4">
-      <img src="./assets/global_xdsm_diagram.png" alt="Global XDSM Diagram Illustrating Modular Interconnection" class="project-image w-full h-32 object-contain rounded cursor-pointer" onclick="openModal('./assets/global_xdsm_diagram.png', 'Global XDSM Diagram Illustrating Modular Interconnection')">
-      <p class="text-xs text-center mt-1">XDSM diagram showing modular architecture of aircraft subsystems models within the simulator.</p>
+      <img src="./graphics/fig3.png" alt="periodicalluy exteded inference curve" class="project-image w-full h-32 object-contain rounded cursor-pointer" onclick="openModal('./graphics/fig3.png', 'periodically extended inference curve')">
+      <p class="text-xs text-center mt-1">Periodically extended canonical inference curve before
+normalization</p>
     </div>
     <!-- Carousel Lower Part -->
     <div class="relative overflow-hidden mt-2 rounded-lg border border-[var(--accent-cyan)]" style="height: 240px;">
       <div class="carousel-container flex transition-transform duration-500 ease-in-out" id="models-carousel" style="transform: translateX(0%);">
         <div class="carousel-item flex-shrink-0 w-full text-center">
-          <img src="./assets/dynamics_model_flowchart.png" alt="Dynamics Model Flowchart" class="w-full h-40 object-contain rounded cursor-pointer" onclick="openModal('./assets/dynamics_model_flowchart.png', 'Flowchart Detailing the Dynamics Model’s State Integration and Event Detection')">
-          <p class="text-xs mt-1">Dynamics model flowchart showing state integration and event detection logic.</p>
+          <img src="./graphics/normalized.png" alt="Normalized Inference Curve" class="w-full h-40 object-contain rounded cursor-pointer" onclick="openModal('./graphics/normalized.png', 'Inference Normalized')">
+          <p class="text-xs mt-1">Normalized Canonical Inference Curve.</p>
         </div>
         <div class="carousel-item flex-shrink-0 w-full text-center">
-          <img src="./assets/controller_model_flowchart.png" alt="Controller Model Flowchart" class="w-full h-40 object-contain rounded cursor-pointer" onclick="openModal('./assets/controller_model_flowchart.png', 'Flowchart Outlining the Controller Model’s PID Regulation and Mode Switch')">
-          <p class="text-xs mt-1">PID controller model regulating pitch, thrust, and mode switching for stability.</p>
+          <img src="./graphics/table1.png" alt="Regional Magnitude/Temporal Offsets" class="w-full h-40 object-contain rounded cursor-pointer" onclick="openModal('./graphics/table1.png', 'Table of Regional Magnitudes cum Temporal Offsets')">
+          <p class="text-xs mt-1">Table: Regional Fractional Magnitudes and Temporal Offsets.</p>
         </div>
         <div class="carousel-item flex-shrink-0 w-full text-center">
-          <img src="./assets/simulation_framework_flowchart.png" alt="Simulation Framework Flowchart" class="w-full h-40 object-contain rounded cursor-pointer" onclick="openModal('./assets/simulation_framework_flowchart.png', 'Flowchart for the Simulation Framework’s Iterative State Updates and Performance Evaluation')">
-          <p class="text-xs mt-1">Framework flowchart for iterative state updates and certification performance evaluation.</p>
+          <img src="./graphics/fig4.png" alt="Regional Contribution Graph" class="w-full h-40 object-contain rounded cursor-pointer" onclick="openModal('./graphics/fig4.png', 'Regional Contribution Curve')">
+          <p class="text-xs mt-1">Individual Inference Contributions(Magnitudes+Temporal Shifts).</p>
         </div>
         <div class="carousel-item flex-shrink-0 w-full text-center">
-          <img src="./assets/atmospheric_model_flowchart.png" alt="Atmospheric Model Flowchart" class="w-full h-40 object-contain rounded cursor-pointer" onclick="openModal('./assets/atmospheric_model_flowchart.png', 'Flowchart Outlining the Atmospheric Model’s Progression from Altitude Input to Environmental Outputs')">
-          <p class="text-xs mt-1">Atmospheric model progression from altitude inputs to wind/temperature outputs.</p>
+          <img src="./graphics/table2.png" alt="Modeling Parameters" class="w-full h-40 object-contain rounded cursor-pointer" onclick="openModal('./graphics/table2.png', 'Parametrs of Modeling ')">
+          <p class="text-xs mt-1">Table showing all Paramters used in Modeling</p>
         </div>
+
+
+
+        <!--
         <div class="carousel-item flex-shrink-0 w-full text-center">
           <img src="./assets/aerodynamic_model_flowchart.png" alt="Aerodynamic Model Flowchart" class="w-full h-40 object-contain rounded cursor-pointer" onclick="openModal('./assets/aerodynamic_model_flowchart.png', 'Flowchart for Aerodynamic Model')">
           <p class="text-xs mt-1">Aerodynamic model flowchart with lift/drag interpolation and ground effect.</p>
@@ -749,6 +754,8 @@ Global diurnal inference traffic was modeled across 10 geographic regions with d
           <img src="./assets/propulsion_model_flowchart.png" alt="Propulsion Model Flowchart" class="w-full h-40 object-contain rounded cursor-pointer" onclick="openModal('./assets/propulsion_model_flowchart.png', 'Flowchart for Propulsion Model')">
           <p class="text-xs mt-1">Turboprop propulsion model including efficiency and OEI thrust asymmetry.</p>
         </div>
+
+        -->
       </div>
       <button onclick="slideCarousel('models-carousel', -1)" class="absolute left-0 top-1/2 transform -translate-y-1/2 bg-[var(--primary-blue)] text-black px-3 py-2 rounded opacity-75 hover:opacity-100 transition-opacity">‹</button>
       <button onclick="slideCarousel('models-carousel', 1)" class="absolute right-0 top-1/2 transform -translate-y-1/2 bg-[var(--primary-blue)] text-black px-3 py-2 rounded opacity-75 hover:opacity-100 transition-opacity">›</button>
@@ -775,13 +782,17 @@ Global diurnal inference traffic was modeled across 10 geographic regions with d
     <div class="relative overflow-hidden mt-4 rounded-lg border border-[var(--accent-cyan)]" style="height: 240px;">
       <div class="carousel-container flex transition-transform duration-500 ease-in-out" id="results-carousel" style="transform: translateX(0%);">
         <div class="carousel-item flex-shrink-0 w-full text-center">
-          <img src="./assets/altitude_aeo.png" alt="Altitude Evolution (AEO)" class="w-full h-40 object-contain rounded cursor-pointer" onclick="openModal('./assets/altitude_aeo.png', 'Altitude Evolution (AEO)')">
-          <p class="text-xs mt-1">Altitude evolution during All Engines Operating (AEO) takeoff.</p>
+          <img src="./graphics/fig4.png" alt="Regional Contribution" class="w-full h-40 object-contain rounded cursor-pointer" onclick="openModal('./graphics/fig4.png', 'Regional Contribution')">
+          <p class="text-xs mt-1">. Individual Inference Contribution (Magnitude + Temporal Shifts).
+.</p>
         </div>
         <div class="carousel-item flex-shrink-0 w-full text-center">
-          <img src="./assets/altitude_oei.png" alt="Altitude Evolution (OEI)" class="w-full h-40 object-contain rounded cursor-pointer" onclick="openModal('./assets/altitude_oei.png', 'Altitude Evolution (OEI)')">
-          <p class="text-xs mt-1">Altitude profile with One Engine Inoperative (OEI) at 10s.</p>
+          <img src="./graphics/fig5.png" alt="Global Aggregate Load " class="w-full h-40 object-contain rounded cursor-pointer" onclick="openModal('./graphics/fig5.png', 'Global Aggreagte fig')">
+          <p class="text-xs mt-1">Global Aggreagte Inference Load</p>
         </div>
+
+
+        <!--
         <div class="carousel-item flex-shrink-0 w-full text-center">
           <img src="./assets/aoa_aeo.png" alt="Angle of Attack (AEO)" class="w-full h-40 object-contain rounded cursor-pointer" onclick="openModal('./assets/aoa_aeo.png', 'Angle of Attack (AEO)')">
           <p class="text-xs mt-1">Angle of attack progression during AEO takeoff.</p>
@@ -818,6 +829,9 @@ Global diurnal inference traffic was modeled across 10 geographic regions with d
           <img src="./assets/tofl_mtow_sensitivity.png" alt="TOFL vs MTOW Sensitivity" class="w-full h-40 object-contain rounded cursor-pointer" onclick="openModal('./assets/tofl_mtow_sensitivity.png', 'Variation of Takeoff Field Length (TOFL) with MTOW for ATR 72 at Sea Level')">
           <p class="text-xs mt-1">Takeoff field length variation with MTOW at sea level.</p>
         </div>
+
+
+        -->
       </div>
       <button onclick="slideCarousel('results-carousel', -1)" class="absolute left-0 top-1/2 transform -translate-y-1/2 bg-[var(--primary-blue)] text-black px-3 py-2 rounded opacity-75 hover:opacity-100 transition-opacity">‹</button>
       <button onclick="slideCarousel('results-carousel', 1)" class="absolute right-0 top-1/2 transform -translate-y-1/2 bg-[var(--primary-blue)] text-black px-3 py-2 rounded opacity-75 hover:opacity-100 transition-opacity">›</button>
@@ -830,6 +844,7 @@ Global diurnal inference traffic was modeled across 10 geographic regions with d
     <a href="mailto:deepak.poudel@student.isae-supaero.fr?subject=Request CS-25 Simulator Report" class="block mt-4 bg-[var(--primary-blue)] text-black px-4 py-2 rounded font-bold hover:bg-[var(--accent-cyan)] transition-all w-full text-center orbitron">Request Full Report</a>
   </div>
 </div>
+    
 
 <style>
   .carousel-container {
@@ -4355,6 +4370,7 @@ Global diurnal inference traffic was modeled across 10 geographic regions with d
 </body>
 </html>
 ```
+
 
 
 
