--- a/index.html
+++ b/index.html
@@ -837,8 +837,8 @@ normalization</p>
       <button onclick="slideCarousel('results-carousel', 1)" class="absolute right-0 top-1/2 transform -translate-y-1/2 bg-[var(--primary-blue)] text-black px-3 py-2 rounded opacity-75 hover:opacity-100 transition-opacity">›</button>
     </div>
     <div class="mt-4">
-      <img src="./assets/takeoff_trajectory_aeo.gif" alt="Takeoff Ground Run and Flight Trajectory (AEO)" class="project-image w-full h-40 object-contain rounded cursor-pointer" onclick="openModal('./assets/takeoff_trajectory_aeo.gif', 'Takeoff Ground Run and Flight Trajectory (AEO)')">
-      <p class="text-xs text-center mt-1">AEO ground run and trajectory reaching 35 ft screen height.</p>
+      <img src="./graphics/fig5.png" alt="Global Aggregate" class="project-image w-full h-40 object-contain rounded cursor-pointer" onclick="openModal('./graphics/fig5.png', 'Global Aggregate Curve')">
+      <p class="text-xs text-center mt-1">Tunable Global Aggregate Inference Load(Will be simulated in section below).</p>
     </div>
  
     <a href="mailto:deepak.poudel@student.isae-supaero.fr?subject=Request CS-25 Simulator Report" class="block mt-4 bg-[var(--primary-blue)] text-black px-4 py-2 rounded font-bold hover:bg-[var(--accent-cyan)] transition-all w-full text-center orbitron">Request Full Report</a>
@@ -4370,6 +4370,7 @@ normalization</p>
 </body>
 </html>
 ```
+
 
 
 
