--- a/index.html
+++ b/index.html
@@ -3772,25 +3772,23 @@ normalization</p>
         <div class="hud-corner tr"></div>
         <div class="hud-corner bl"></div>
         <div class="hud-corner br"></div>
-        <h3 class="orbitron text-xl font-bold mb-4 text-success-green"> National Level Energy Hackathon </h3>
+        <h3 class="orbitron text-xl font-bold mb-4 text-success-green">1st Place,20th National Technological Festival, <em>LOCUS 2024</em> </h3>
         <img src="./assets/awards/power_hackathon_win.png" alt="Power Hackathon Winning Certificate/Trophy" class="project-image w-full h-48 object-contain mt-2 rounded cursor-pointer" onclick="openModal('./assets/awards/power_hackathon_win.png', 'Power Hackathon Win')">
-        <p class="text-xs text-center mt-1">Development of AI Integrated Home Automation System.</p>
-<p class="text-sm mb-4"><strong>First Place:</strong> 20th National Technological Festival, <em>LOCUS 2024</em><br>
-          While leading the team <strong>WEAUTOMATE</strong>, we secured first place and were honored by the <strong>Honourable Dignitaries of the Nepal Electricity Authority (NEA)</strong>. The winning project, the <strong>AI-Integrated Home Automation System</strong>, successfully demonstrated a solution for retrofitting traditional appliances using an <em>ESP32 controller</em>, transducer, data logging, communication system, and relays. The system initially relied on a local computer to run its AI model, which uses real-time data to autonomously predict and actuate appliance states, proving the viability of using behavioral patterns for enhanced energy efficiency.</p>
+        <p class="text-xs text-center mt-1"> Group Photo After Winning Event </p>
+<p class="text-sm mb-4"> 
+          While leading the team WEAUTOMAE, We secured first place and were honored by the <strong>Honourable Dignitaries of the Nepal Electricity Authority (NEA)</strong>. The winning project, the <strong>AI-Integrated Home Automation System</strong>, successfully demonstrated a solution for retrofitting traditional appliances using an <em>ESP32 controller</em>, transducer, data logging, communication system, and relays. The system initially relied on a local computer to run its AI model, which uses real-time data to autonomously predict and actuate appliance states, proving the viability of using behavioral patterns for enhanced energy efficiency.</p>
       </div>
 
       <!-- Power Hackathon Card -->
       <div class="project-card hologram">
-        <h3 class="orbitron text-xl font-bold mb-4 text-success-green">Power Hackathon-Pashchimanchal Campus </h3>
+        <h3 class="orbitron text-xl font-bold mb-4 text-success-green"> Power Hackathon Champion,<em> Commercialized AI Home Automation </h3>
         <img src="./assets/awards/energy_hackathon_win.png" alt="Energy Hackathon Winning Team Photo/Award" class="project-image w-full h-48 object-contain mt-2 rounded cursor-pointer" onclick="openModal('./assets/awards/energy_hackathon_win.png', 'Energy Hackathon Win')">
-        <p class="text-xs text-center mt-1">Team award for sustainable energy solution.</p>
+        <p class="text-xs text-center mt-1">Developed Hardware Model.</p>
        
   <p class="text-sm mb-4">
           <strong>First Place:</strong> Power Hackathon Champion,<em> Commercialized AI Home Automation </em><br>
          We achieved our second major victory by winning the <strong> Power Hackathon  </strong> at Electromela 2.0, another premier Electrical Engineering projects-based techfest. Our project was extensively modified into a market-available product. We refined the hardware with higher-rated actuators, polished enclosure, achieved superior predictive accuracy through an extensive training dataset, and integrated Google Home control for easier accessibility.
         </p>
-  
-  <p class="text-sm mb-4">Awarded top honors in the Energy Hackathon for a solar-integrated energy management system that reduced consumption by 25% in simulated urban settings. Collaborated with a cross-disciplinary team to integrate machine learning for predictive load forecasting. This win validated my expertise in renewable energy systems and opened doors to industry networking.</p>
         <a href="mailto:dipesh.poudel@student.isae-supaero.fr?subject=Energy Hackathon Details" class="block mt-4 bg-[var(--primary-blue)] text-black px-4 py-2 rounded font-bold hover:bg-[var(--accent-cyan)] transition-all w-full text-center orbitron">Request Certificate/Details</a>
       </div>
     </div>
@@ -4598,6 +4596,7 @@ normalization</p>
 </body>
 </html>
 ```
+
 
 
 
