--- a/index.html
+++ b/index.html
@@ -3776,7 +3776,7 @@ normalization</p>
         <img src="./assets/awards/power_hackathon_win.png" alt="Power Hackathon Winning Certificate/Trophy" class="project-image w-full h-48 object-contain mt-2 rounded cursor-pointer" onclick="openModal('./assets/awards/power_hackathon_win.png', 'Power Hackathon Win')">
         <p class="text-xs text-center mt-1"> Group Photo After Winning Event </p>
 <p class="text-sm mb-4"> 
-          While leading the team WEAUTOMAE, We secured first place and were honored by the <strong>Honourable Dignitaries of the Nepal Electricity Authority (NEA)</strong>. The winning project, the <strong>AI-Integrated Home Automation System</strong>, successfully demonstrated a solution for retrofitting traditional appliances using an <em>ESP32 controller</em>, transducer, data logging, communication system, and relays. The system initially relied on a local computer to run its AI model, which uses real-time data to autonomously predict and actuate appliance states, proving the viability of using behavioral patterns for enhanced energy efficiency.</p>
+          While I was leading our team WEAUTOMAE, Team secured first place and were honored by the <strong>Honourable Dignitaries of the Nepal Electricity Authority (NEA)</strong>. The winning project, the <strong>AI-Integrated Home Automation System</strong>, successfully demonstrated a solution for retrofitting traditional appliances using an <em>ESP32 controller</em>, transducer, data logging, communication system, and relays. The system initially relied on a local computer to run its AI model, which uses real-time data to autonomously predict and actuate appliance states, proving the viability of using behavioral patterns for enhanced energy efficiency.</p>
       </div>
 
       <!-- Power Hackathon Card -->
@@ -3786,10 +3786,9 @@ normalization</p>
         <p class="text-xs text-center mt-1">Developed Hardware Model.</p>
        
   <p class="text-sm mb-4">
-          <strong>First Place:</strong> Power Hackathon Champion,<em> Commercialized AI Home Automation </em><br>
-         We achieved our second major victory by winning the <strong> Power Hackathon  </strong> at Electromela 2.0, another premier Electrical Engineering projects-based techfest. Our project was extensively modified into a market-available product. We refined the hardware with higher-rated actuators, polished enclosure, achieved superior predictive accuracy through an extensive training dataset, and integrated Google Home control for easier accessibility.
-        </p>
-        <a href="mailto:dipesh.poudel@student.isae-supaero.fr?subject=Energy Hackathon Details" class="block mt-4 bg-[var(--primary-blue)] text-black px-4 py-2 rounded font-bold hover:bg-[var(--accent-cyan)] transition-all w-full text-center orbitron">Request Certificate/Details</a>
+We achieved our second major victory by winning the Power Hackathon at Electromela 2.0,another major Electrical Engineering projects based techfest. Our  Project  was extensively modified into a market-available product. We refined the hardware with a higher rated  actuators, polished  enclosure, achieved superior predictive accuracy through an extensive training dataset, and integrated Google Home control for easier accessibility.</p>
+
+  <a href="mailto:dipesh.poudel@student.isae-supaero.fr?subject=Energy Hackathon Details" class="block mt-4 bg-[var(--primary-blue)] text-black px-4 py-2 rounded font-bold hover:bg-[var(--accent-cyan)] transition-all w-full text-center orbitron">Request Certificate/Details</a>
       </div>
     </div>
 
@@ -4596,6 +4595,7 @@ normalization</p>
 </body>
 </html>
 ```
+
 
 
 
