--- a/index.html
+++ b/index.html
@@ -3773,7 +3773,7 @@ normalization</p>
         <div class="hud-corner bl"></div>
         <div class="hud-corner br"></div>
         <h3 class="orbitron text-xl font-bold mb-4 text-success-green">1st Place,20th National Technological Festival, <em>LOCUS 2024</em> </h3>
-        <img src="./graphics/power2.jpg" alt="Energy Hackathon Winning Picture/Trophy" class="project-image w-full h-48 object-contain mt-2 rounded cursor-pointer" onclick="openModal('./graphics/power2.', 'Power Hackathon Win')">
+        <img src="./graphics/power2.jpg" alt="Energy Hackathon Winning Picture/Trophy" class="project-image w-full h-48 object-contain mt-2 rounded cursor-pointer" onclick="openModal('./graphics/power2.jpg', 'Power Hackathon Win')">
         <p class="text-xs text-center mt-1"> Group Photo After Winning Event </p>
 <p class="text-sm mb-4"> 
           While I was leading our team WEAUTOMAE, Team secured first place and were honored by the <strong>Honourable Dignitaries of the Nepal Electricity Authority (NEA)</strong>. The winning project, the <strong>AI-Integrated Home Automation System</strong>, successfully demonstrated a solution for retrofitting traditional appliances using an <em>ESP32 controller</em>, transducer, data logging, communication system, and relays. The system initially relied on a local computer to run its AI model, which uses real-time data to autonomously predict and actuate appliance states, proving the viability of using behavioral patterns for enhanced energy efficiency.</p>
@@ -4595,6 +4595,7 @@ We achieved our second major victory by winning the Power Hackathon at Electrome
 </body>
 </html>
 ```
+
 
 
 
