--- a/index.html
+++ b/index.html
@@ -3695,30 +3695,30 @@ normalization</p>
   </div>
 </section>
 
-<!-- NEW TEACHING/MENTORING SECTION -->
-<section id="teaching" class="section interests-bg"> <!-- Reuse or custom bg -->
+<!-- TEACHING & MENTORING EXPERIENCE SECTION -->
+<section id="teaching" class="section interests-bg">
   <div class="max-w-7xl mx-auto">
     <h2 class="orbitron text-4xl font-bold text-center mb-12">
       <span class="status-indicator status-active"></span>TEACHING & MENTORING EXPERIENCE
     </h2>
-    <div class="grid grid-cols-1 lg:grid-cols-1 gap-8 mb-16">
-      <!-- Research Assistant -->
+    <div class="grid grid-cols-1 lg:grid-cols-1 gap-8 mb-16"> <!-- 1-col grid for subsections -->
+      <!-- Subsection 1: Research Assistant -->
       <div class="project-card">
         <div class="hud-corner tl"></div>
         <div class="hud-corner tr"></div>
         <div class="hud-corner bl"></div>
         <div class="hud-corner br"></div>
         <h3 class="orbitron text-xl font-bold mb-4 text-accent-cyan">Research Assistant, Dept of Electrical Engineering, Paschimanchal Campus</h3>
-        <p class="text-sm mb-4">[Brief description: e.g., Guided undergrad projects on power electronics, supervised lab sessions on circuit design, and co-authored papers on renewable energy systems.].</p>
+        <p class="text-sm mb-4">Guided undergrad projects on power electronics, supervised lab sessions on circuit design, and co-authored papers on renewable energy systems. [Add more details here if needed].</p>
         <!-- Add images if needed -->
-
-
+        <!-- <img src="./graphics/research_assistant1.jpg" alt="Lab Session" class="project-image w-full h-48 object-contain mt-2 rounded cursor-pointer" onclick="openModal('./graphics/research_assistant1.jpg', 'Research Assistant Photo 1')"> -->
+      </div>
 
   
 
 
 
-
+/*
 <!-- COMMUNITY SCHOOL ROBOTICS 3D PRINTING WORKSHOP VOLUNTEERING SECTION -->
 <section id="volunteer" class="section interests-bg"> <!-- Add ID for nav link, e.g., #volunteer -->
   <div class="max-w-7xl mx-auto">
@@ -3727,8 +3727,10 @@ normalization</p>
     </h2>
     
     <!-- Single Full-Width Card for Volunteering (with Vertical Photo Layout) -->
-    <div class="grid grid-cols-1 gap-8 mb-16">
-      <div class="project-card">
+  
+  <div class="grid grid-cols-1 gap-8 mb-16">
+*/
+      <div class="project-card hologram">
         <div class="hud-corner tl"></div>
         <div class="hud-corner tr"></div>
         <div class="hud-corner bl"></div>
@@ -4857,6 +4859,7 @@ autoSlide('volunteer-carousel-2');
 </body>
 </html>
 ```
+
 
 
 
