--- a/index.html
+++ b/index.html
@@ -3804,7 +3804,7 @@ normalization</p>
   .project-image {
     width: 100%;
     height: 200px;
-    object-fit: contain;
+    object-fit: cover;
   }
   .modal {
     display: none;
@@ -4861,6 +4861,7 @@ autoSlide('volunteer-carousel-2');
 </body>
 </html>
 ```
+
 
 
 
