--- a/index.html
+++ b/index.html
@@ -3791,7 +3791,7 @@ normalization</p>
  
 
 <style>
-  .carousel-container {
+/*  .carousel-container {
     display: flex;
     width: 100%;
     height: 200px;
@@ -3801,11 +3801,41 @@ normalization</p>
     height: 100%;
     object-fit: contain;
   }
+
   .project-image {
     width: 100%;
     height: 400px;
     object-fit: contain;
   }
+
+  */
+
+  .carousel-container {
+  display: flex;
+  width: 100%;
+  height: 400px;
+}
+.carousel-item {
+  min-width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.carousel-item img {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain;
+}
+.project-image {
+  width: 100%;
+  height: 400px;
+  object-fit: contain;
+}
+
+
+  
+  
   .modal {
     display: none;
     position: fixed;
@@ -4861,6 +4891,7 @@ autoSlide('volunteer-carousel-2');
 </body>
 </html>
 ```
+
 
 
 
