--- a/index.html
+++ b/index.html
@@ -3750,7 +3750,7 @@ normalization</p>
                   <img src="./graphics/volunteer_photo1a.jpg" alt="Workshop Session 1A" class="cursor-pointer" onclick="openModal('./graphics/volunteer_photo1a.jpg', 'Volunteer Photo 1A')">
                 </div>
                 <div class="carousel-item flex-shrink-0 w-full">
-                  <img src="./graphics/volunteer_photo1b.jpg" alt="Workshop Session 1B" class="cursor-pointer" onclick="openModal('./graphics/volunteer_photo1b.jpg', 'Volunteer Photo 1B')">
+                  <img src="./graphics/volunteer_photo1b.png" alt="Workshop Session 1B" class="cursor-pointer" onclick="openModal('./graphics/volunteer_photo1b.png', 'Volunteer Photo 1B')">
                 </div>
               </div>
               <button onclick="slideCarousel('volunteer-carousel-1', -1)" class="absolute left-0 top-1/2 transform -translate-y-1/2 bg-[var(--primary-blue)] text-black px-3 py-2 rounded opacity-75 hover:opacity-100 transition-opacity">‹</button>
@@ -4865,6 +4865,7 @@ normalization</p>
 </body>
 </html>
 ```
+
 
 
 
